# glsl-playground

./: .gitmodules  README.md  meson.build
src/: Material.hpp  Matrix.hpp  Object.cpp  Object.hpp  Shape.hpp  ShapeIndex.hpp  SolidShape.hpp  SolidShapeIndex.hpp  Uniform.hpp  Vector.hpp  Window.cpp  Window.hpp  main.cpp  point.frag  point.vert  shape-example.hpp  util
